[tool.poetry]
name = "martian_imperial_year_table"
version = "1.0.0"
description = "帝國火星曆テーブル"
authors = ["ne-sachirou <ne-sachirou@hatena.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Markdown = "^3.2.1"
flasgger = "^0.9.4"
pytz = "^2019.3"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
flake8-mypy = "^17.8.0"
mypy = "^0.770"
pydocstyle = "^5.0.2"
transcrypt = "^3.7.16"
yamllint = "^1.22.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
