[tool.poetry]
name = "martian_imperial_year_table"
version = "1.0.0"
description = "帝國火星曆テーブル"
authors = ["ne-sachirou <ne-sachirou@hatena.ne.jp>"]
license = "Unlicense"

[tool.poetry.dependencies]
flasgger = "^0.9.4"
Flask = "^1.1.2"
holiday-jp = "^19.10.14"
Markdown = "^3.2.2"
python = "^3.8"
pytz = "^2020.1"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
mypy = "^0.782"
transcrypt = "^3.7.16"
yamllint = "^1.22.1"
coverage = "^5.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
