[tool.poetry]
name = "martian_imperial_year_table"
version = "1.0.0"
description = "帝國火星曆テーブル"
authors = ["ne-sachirou <ne-sachirou@hatena.ne.jp>"]
license = "Unlicense"

[tool.poetry.dependencies]
Flask = "^1.1.2"
Markdown = "^3.2.2"
flasgger = "^0.9.4"
holiday-jp = "^20.12.2"
jsonschema = "3.1.1"  # TODO: Remove this after upgrading Python.
python = "^3.7"
pytz = "^2020.1"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "3.8.3"
flake8-docstrings = "^1.5.0"
mypy = "^0.790"
transcrypt = "^3.7.16"
yamllint = "^1.22.1"
coverage = "^5.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
